use requestAnimationFrame and transitionend event to set correct height values pre-, mid-, and post-transition for collapse

--- a/src/scss/components/_collapsible.scss
+++ b/src/scss/components/_collapsible.scss
@@ -59,6 +59,7 @@
 
 .collapsible-content {
   overflow: hidden;
+  visibility: hidden;
   padding: 0;
   margin: 0;
   height: 0;
